added image folder and files
inserted images into page and added some style

--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>YOUR NAME</title>
+    <title>Ian Snyder</title>
   </head>
   <body class="index">
     <div id="main" role="main">
       <h1>Ian Snyder</h1>
       <p>This is my portfolio.</p>
     </div>
+      <img src="images/SouthSIsterSummit4x5.jpg">
+      <img src="images/OlympicGiant.jpg">
   </body>
 </html>
