Updated old code/folders

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
   <body class="index">
     <div id="main" role="main">
       <h1>Ian Snyder</h1>
-      <p>This is my portfolio.</p>
+      <p>This is my CS160 portfolio.</p>
     </div>
       <img src="images/SouthSIsterSummit4x5.jpg">
-      <img src="images/OlympicGiant.jpg">
   </body>
 </html>
