updated html and readme

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
       <h1>Ian Snyder</h1>
       <p>This is my CS160 portfolio.</p>
     </div>
+    <div>
+        <h1>Assignment Links</h1>
+        <p><a href="https://scratch.mit.edu/projects/331549006">Scratch Assignment 1</a></p>
+    </div>
       <img src="images/SouthSIsterSummit4x5.jpg">
   </body>
 </html>
