reused code/files from CIS195 portfolio

--- a/index.html
+++ b/index.html
@@ -1,19 +1,81 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <link href="screen.css" media="screen" rel="stylesheet" type="text/css" />
-    <title>Ian Snyder</title>
-  </head>
-  <body class="index">
-    <div id="main" role="main">
-      <h1>Ian Snyder</h1>
-      <p>This is my CS160 portfolio.</p>
-    </div>
-    <div>
-        <h1>Assignment Links</h1>
-        <p><a href="https://scratch.mit.edu/projects/331549006">Scratch Assignment 1</a></p>
-    </div>
-      <img src="images/SouthSIsterSummit4x5.jpg">
-  </body>
+<head>
+<meta name="author" content="Ian Snyder">
+<title>Ian Snyder</title>
+<link rel="stylesheet" media="screen" href="responsivehomepage.css">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+<link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
+
+
+</head>
+<body>
+    <header>
+        <h1 id="top">Ian Snyder</h1>
+        <h2>Web Design Portfolio: CIS-195</h2>
+        <div id="banner-image"></div>
+    </header>
+    <nav>
+     <div id="main-nav">
+        <ul>
+        <li><a href="https://scratch.mit.edu/projects/331549006">Scratch Assignment 1</a></li>
+        <li><a href="week2wednesday.html">Week 2 Wednesday</a></li>
+        <li><a href="pinemountainpractice.html">Week 3 Pine Mountain Sports</a></li>
+        <li><a href="week2monday.html">Week 2 Monday</a></li>
+        <li><a href="week4webpagemimicthomasheaton.html">Week 4 Page Mimic Thomas Heaton Photography</a></li>
+        <li><a href="week4pagemimickorua.html">Week 4 Korua Shapes Mimic</a></li>
+        <li><a href="https://docs.google.com/document/d/e/2PACX-1vSOgfZ72XRx4exoXuBHkOCtPMBo-tfzyy4KgoEsBpIDBZRpqn5KUW0DjX9y4OdtKnkQVNr05dKaKeLn/pub">Week 4 Google Doc Reference</a></li>
+        <li><a href="week4wednesday.html">Week 4 Wednesday Participation</a></li>
+        <li><a href="week5monday.html">Week 5 Monday Participation</a></li>
+        <li><a href="photostory.html">Photo Story</a></li>
+        <li><a href="extracreditparallax.html">Extra Credit Parallax</a></li>    
+        <li><a href="week7wednesday.html">Responsive Design Participation</a></li>
+        <li><a href="responsivesiteassignment.html">Assignment 5 Responsive Page</a></li>
+        <li><a href="week8participation.html">Week 8 Participation</a></li>
+        <li><a href="navmenus.html">Assignment 6 Nav Menus</a></li>  
+        <li><a href="formcontrols.html">Form Controls</a></li>  
+        <li><a href="hobbysitehomepage.html">Hobby Site</a></li>  
+       
+     <!-- new section link  <a href=""><li></li></a>  new section link-->
+
+      </ul>
+     </div>
+      <div id="side-image"></div>
+    </nav>
+    <footer>
+        <h3><a href="#top">Back To Top</a></h3>
+    </footer>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+</body>
 </html>
