updated second page and home page with links

--- a/index.html
+++ b/index.html
@@ -19,22 +19,9 @@
      <div id="main-nav">
         <ul>
         <li><a href="https://scratch.mit.edu/projects/331549006">Scratch Assignment 1</a></li>
-        <li><a href="week2wednesday.html">Week 2 Wednesday</a></li>
-        <li><a href="pinemountainpractice.html">Week 3 Pine Mountain Sports</a></li>
-        <li><a href="week2monday.html">Week 2 Monday</a></li>
-        <li><a href="week4webpagemimicthomasheaton.html">Week 4 Page Mimic Thomas Heaton Photography</a></li>
-        <li><a href="week4pagemimickorua.html">Week 4 Korua Shapes Mimic</a></li>
-        <li><a href="https://docs.google.com/document/d/e/2PACX-1vSOgfZ72XRx4exoXuBHkOCtPMBo-tfzyy4KgoEsBpIDBZRpqn5KUW0DjX9y4OdtKnkQVNr05dKaKeLn/pub">Week 4 Google Doc Reference</a></li>
-        <li><a href="week4wednesday.html">Week 4 Wednesday Participation</a></li>
-        <li><a href="week5monday.html">Week 5 Monday Participation</a></li>
-        <li><a href="photostory.html">Photo Story</a></li>
-        <li><a href="extracreditparallax.html">Extra Credit Parallax</a></li>    
-        <li><a href="week7wednesday.html">Responsive Design Participation</a></li>
-        <li><a href="responsivesiteassignment.html">Assignment 5 Responsive Page</a></li>
-        <li><a href="week8participation.html">Week 8 Participation</a></li>
-        <li><a href="navmenus.html">Assignment 6 Nav Menus</a></li>  
-        <li><a href="formcontrols.html">Form Controls</a></li>  
-        <li><a href="hobbysitehomepage.html">Hobby Site</a></li>  
+        <li><a href="secondpage.html">Second Page</a></li>
+        <!-- add links <li><a href=""></a></li> -->
+       
        
      <!-- new section link  <a href=""><li></li></a>  new section link-->
 
