--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta name="author" content="Ian Snyder">
 <title>Ian Snyder</title>
-<link rel="stylesheet" media="screen" href="responsivehomepage.css">
+<link rel="stylesheet" media="screen" href="styles/responsivehomepage.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <link href="https://fonts.googleapis.com/css?family=PT+Sans+Caption" rel="stylesheet">
 
@@ -18,8 +18,15 @@
     <nav>
      <div id="main-nav">
         <ul>
-        <li><a href="https://scratch.mit.edu/projects/331549006">Scratch Assignment 1</a></li>
-        <li><a href="secondpage.html">Second Page</a></li>
+        <li><a href="https://scratch.mit.edu/projects/331549006">Scratch Projects</a></li>
+        <li><a href="#">Reading Questions</a></li>
+        <li><a href="#">Degree Pathways</a></li>
+        <li><a href="#">App Inventor</a></li>
+        <li><a href="#">Processing Programs</a></li>
+        <li><a href="#">Python CodeHS</a></li>
+        <li><a href="#">Python Rock Paper Scissors</a></li>
+        <li><a href="#">Python Master Mind</a></li>
+        <li><a href="#">Mythical Man Month</a></li>
         <!-- add links <li><a href=""></a></li> -->
        
        
