made link to scratch open in new tab when clicked

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <nav>
      <div id="main-nav">
         <ul>
-        <li><a href="https://scratch.mit.edu/projects/331549006">Scratch Projects</a></li>
+        <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Projects</a></li>
         <li><a href="#">Reading Questions</a></li>
         <li><a href="#">Degree Pathways</a></li>
         <li><a href="#">App Inventor</a></li>
