played with scratch links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
 <meta name="author" content="Ian Snyder">
-<title>Ian Snyder - CS160</title>
+<title>Ian Snyder CS160 Portfolio</title>
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <link rel="stylesheet" media="screen" href="styles/responsivehomepage.css">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
@@ -39,7 +39,12 @@
      </div>
       <div id="side-image"></div>
     </nav>
+    <div>
+    <div id="scratch-window"><iframe src="https://scratch.mit.edu/projects/331549006/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+    </div>
+    </div>
     <footer>
+         
         <h3><a href="#top">Back To Top</a></h3>
     </footer>
 
