added a W3 framework pages

--- a/index.html
+++ b/index.html
@@ -22,15 +22,17 @@
      <div id="main-nav">
         <ul>
         <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Projects</a></li>
-        <li><a href="#">Reading Questions</a></li>
+        <li><a href="https://docs.google.com/document/d/1jzotic0JPLNSXJc3z8HoFGJfhEN5lreEKNi18DYWVOY/edit?usp=sharing" target="_blank">Reading Questions For CODE</a></li>
+        <li><a href="#" target="_blank">Reading Questions For Dreaming in Code</a></li>
         <li><a href="#">Degree Pathways</a></li>
         <li><a href="#">App Inventor</a></li>
         <li><a href="#">Processing Programs</a></li>
         <li><a href="#">Python CodeHS</a></li>
         <li><a href="#">Python Rock Paper Scissors</a></li>
         <li><a href="#">Python Master Mind</a></li>
+        <li><a href="photogallery.html" target="_blank">W3 Framework Page</a></li>
         <li><a href="#">Mythical Man Month</a></li>
-        <!-- add links <li><a href=""></a></li> -->
+        <!-- add links <li><a href="#" target="_blank"></a></li> -->
        
        
      <!-- new section link  <a href=""><li></li></a>  new section link-->
