--- a/photogallery.html
+++ b/photogallery.html
@@ -34,7 +34,7 @@ img {margin-bottom: -7px}
 <span class="w3-button w3-xxlarge w3-white w3-right" onclick="w3_open()"><i class="fa fa-bars"></i></span> 
 <div class="w3-clear"></div>
 <header class="w3-center w3-margin-bottom">
-  <h1><b>PHOTOLIO</b></h1>
+  <h1><b>Ian Snyder Photography</b></h1>
   <p><b>A template made by w3.css for photographers.</b></p>
   <p class="w3-padding-16"><button class="w3-button w3-black" onclick="myFunction()">Toggle Grid Padding</button></p>
 </header>
@@ -43,30 +43,33 @@ img {margin-bottom: -7px}
 <!-- Photo Grid -->
 <div class="w3-row" id="myGrid" style="margin-bottom:128px">
   <div class="w3-third">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/sound.jpg" style="width:100%">
-    <img src="/w3images/woods.jpg" style="width:100%">
-    <img src="/w3images/rock.jpg" style="width:100%">
-    <img src="/w3images/nature.jpg" style="width:100%">
-    <img src="/w3images/mist.jpg" style="width:100%">
+    <img src="images/downsizedImages/HoneyBeeLupine.jpg" style="width:100%">
+    <img src="images/downsizedImages/NicoleShiprwreckBeach%20(4%20of%204).jpg" style="width:100%">
+    <img src="images/downsizedImages/TumaloFalls16x9-1.jpg" style="width:100%">
+    <img src="images/downsizedImages/sparkssouthsistersunset.jpg" style="width:100%">
+    <img src="images/downsizedImages/TwilightSouthCascades-1.jpg" style="width:100%">
+    <img src="images/downsizedImages/WoodCuttingCascadeLakeHwy%20(1%20of%205).jpg" style="width:100%">
+   
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/coffee.jpg" style="width:100%">
-    <img src="/w3images/bridge.jpg" style="width:100%">
-    <img src="/w3images/notebook.jpg" style="width:100%">
-    <img src="/w3images/london.jpg" style="width:100%">
-    <img src="/w3images/rocks.jpg" style="width:100%">
-    <img src="/w3images/avatar_g.jpg" style="width:100%">
+    <img src="images/downsizedImages/sparkssouthsistersunset.jpg" style="width:100%">
+    <img src="images/downsizedImages/TwilightSouthCascades-1.jpg" style="width:100%">
+    <img src="images/downsizedImages/WoodCuttingCascadeLakeHwy%20(1%20of%205).jpg" style="width:100%">
+    <img src="images/downsizedImages/GreatSandDunesPano.jpg" style="width:100%">
+    <img src="images/downsizedImages/NicoleShiprwreckBeach%20(4%20of%204).jpg" style="width:100%">
+    <img src="images/downsizedImages/TumaloFalls16x9-1.jpg" style="width:100%">
   </div>
 
   <div class="w3-third">
-    <img src="/w3images/mist.jpg" style="width:100%">
-    <img src="/w3images/workbench.jpg" style="width:100%">
-    <img src="/w3images/gondol.jpg" style="width:100%">
-    <img src="/w3images/skies.jpg" style="width:100%">
-    <img src="/w3images/lights.jpg" style="width:100%">
-    <img src="/w3images/workshop.jpg" style="width:100%">
+    
+    <img src="/images/downsizedImages/TumaloFalls16x9-1.jpg" style="width:100%">
+    <img src="/images/downsizedImages/sparkssouthsistersunset.jpg" style="width:100%">
+    <img src="/images/downsizedImages/GreatSandDunesPano.jpg" style="width:100%">
+    <img src="/images/downsizedImages/WoodCuttingCascadeLakeHwy%20(1%20of%205).jpg" style="width:100%">
+    <img src="/images/downsizedImages/NicoleShiprwreckBeach%20(4%20of%204).jpg" style="width:100%"> 
+    <img src="/images/downsizedImages/HoneyBeeLupine.jpg" style="width:100%">
+
   </div>
 </div>
 
