added google docs for reading and w3 framework

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <nav>
      <div id="main-nav">
         <ul>
-        <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Projects</a></li>
+        <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Project 1</a></li>
+        <li><a href="https://scratch.mit.edu/projects/333407264" target="_blank">Scratch Project 2</a></li>
+        <li><a href="#" target="_blank">Scratch Project 3</a></li>
         <li><a href="https://docs.google.com/document/d/1jzotic0JPLNSXJc3z8HoFGJfhEN5lreEKNi18DYWVOY/edit?usp=sharing" target="_blank">Reading Questions For CODE</a></li>
         <li><a href="#" target="_blank">Reading Questions For Dreaming in Code</a></li>
         <li><a href="#">Degree Pathways</a></li>
@@ -43,6 +45,7 @@
     </nav>
     <div>
     <div id="scratch-window"><iframe src="https://scratch.mit.edu/projects/331549006/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <iframe src="https://scratch.mit.edu/projects/333407264/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
     </div>
     </div>
     <footer>
