--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
         <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Project 1</a></li>
         <li><a href="https://scratch.mit.edu/projects/333407264" target="_blank">Scratch Project 2</a></li>
         <li><a href="#" target="_blank">Scratch Project 3</a></li>
+        <li><a href="#scratch-window">Jump To Scratch Projects Below</a></li>
         <li><a href="https://docs.google.com/document/d/1jzotic0JPLNSXJc3z8HoFGJfhEN5lreEKNi18DYWVOY/edit?usp=sharing" target="_blank">Reading Questions For CODE</a></li>
-        <li><a href="#" target="_blank">Reading Questions For Dreaming in Code</a></li>
+        <li><a href="https://docs.google.com/document/d/1BQPGVSQVREO0Y494GgY9xLufZ7wvAnJ-i5R3JIHENwU/edit?usp=sharing" target="_blank">Reading Questions For Dreaming in Code</a></li>
         <li><a href="#">Degree Pathways</a></li>
         <li><a href="#">App Inventor</a></li>
         <li><a href="#">Processing Programs</a></li>
