put scratch windows side by side

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
      </div>
       <div id="side-image"></div>
     </nav>
-    <div>
-    <div id="scratch-window"><iframe src="https://scratch.mit.edu/projects/331549006/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        <iframe src="https://scratch.mit.edu/projects/333407264/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-    </div>
+    <div class="row">
+        <div class="column"><iframe src="https://scratch.mit.edu/projects/331549006/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+        <div class="column"><iframe src="https://scratch.mit.edu/projects/333407264/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
     </div>
     <footer>
          
