updated for scratch project 3

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <ul>
         <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Project 1</a></li>
         <li><a href="https://scratch.mit.edu/projects/333407264" target="_blank">Scratch Project 2</a></li>
-        <li><a href="#" target="_blank">Scratch Project 3</a></li>
+        <li><a href="https://scratch.mit.edu/projects/335538209" target="_blank">Scratch Project 3</a></li>
         <li><a href="#scratch-window">Jump To Scratch Projects Below</a></li>
         <li><a href="https://docs.google.com/document/d/1jzotic0JPLNSXJc3z8HoFGJfhEN5lreEKNi18DYWVOY/edit?usp=sharing" target="_blank">Reading Questions For CODE</a></li>
         <li><a href="https://docs.google.com/document/d/1BQPGVSQVREO0Y494GgY9xLufZ7wvAnJ-i5R3JIHENwU/edit?usp=sharing" target="_blank">Reading Questions For Dreaming in Code</a></li>
@@ -44,9 +44,10 @@
      </div>
       <div id="side-image"></div>
     </nav>
-    <div class="row">
+    <div id="scratch-window" class="row">
         <div class="column"><iframe src="https://scratch.mit.edu/projects/331549006/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
         <div class="column"><iframe src="https://scratch.mit.edu/projects/333407264/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
+         <div class="column"><iframe src="https://scratch.mit.edu/projects/335538209/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe></div>
     </div>
     <footer>
          
