pushed tons of changes from the past week of progress

--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
         <li><a href="#">Degree Pathways</a></li>
         <li><a href="#">App Inventor</a></li>
         <li><a href="#">Processing Programs</a></li>
-        <li><a href="#">Python CodeHS</a></li>
-        <li><a href="#">Python Rock Paper Scissors</a></li>
-        <li><a href="#">Python Master Mind</a></li>
+        <li><a href="codedisplay.html" target="_blank">Python Code</a></li>
+        <li><a href="codehs.html">Python CodeHS</a></li>
+        <li><a href="rockpaperscissors.html">Python Rock Paper Scissors</a></li>
+        
         <li><a href="photogallery.html" target="_blank">W3 Framework Page</a></li>
         <li><a href="#">Mythical Man Month</a></li>
         <!-- add links <li><a href="#" target="_blank"></a></li> -->
