--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -20,7 +20,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">Home</a>
     <a href="rockpaperscissors.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Rock Paper Scissors</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
+    <a href="codehs.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
     
     <!-- these links do nothing yet
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a> 
