--- a/rockpaperscissors.html
+++ b/rockpaperscissors.html
@@ -53,7 +53,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
       <h1>Rock Paper Scissors</h1>
       <h5 class="w3-padding-32">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h5>
 
-      <img src="images/downsizedImages/rockpaperscissorsscreenshot2.png">
+      <iframe height="600px" width="120%" src="https://repl.it/@IanSnyder1/ActiveBlushingConcentrate?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
         
     </div>
 
