--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <nav>
      <div id="main-nav">
         <ul>
+        <li><a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank">6th Week Check Rubric</a></li>
         <li><a href="https://scratch.mit.edu/projects/331549006" target="_blank">Scratch Project 1</a></li>
         <li><a href="https://scratch.mit.edu/projects/333407264" target="_blank">Scratch Project 2</a></li>
         <li><a href="https://scratch.mit.edu/projects/335538209" target="_blank">Scratch Project 3</a></li>
@@ -28,7 +29,7 @@
         <li><a href="https://docs.google.com/document/d/1jzotic0JPLNSXJc3z8HoFGJfhEN5lreEKNi18DYWVOY/edit?usp=sharing" target="_blank">Reading Questions For CODE</a></li>
         <li><a href="https://docs.google.com/document/d/1BQPGVSQVREO0Y494GgY9xLufZ7wvAnJ-i5R3JIHENwU/edit?usp=sharing" target="_blank">Reading Questions For Dreaming in Code</a></li>
         <li><a href="https://docs.google.com/document/d/1c_GTWWZSkjhWXVyFg7YQ4dkE6uu35B5fJSo16xnYMrE/edit?usp=sharing" target="_blank">Degree Pathways</a></li>
-        <li><a href="https://youtu.be/PBTgCKDzUzc" target="_blank">App Inventor</a></li>
+        <li><a href="https://youtu.be/PBTgCKDzUzc" target="_blank">App Inventor Youtube Video</a></li>
         <li><a href="empty-example/processing.html" target="_blank">Processing Program</a></li>
         <li><a href="codedisplay.html" target="_blank">Python Code</a></li>
         <li><a href="codehs.html">Python CodeHS</a></li>
