--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <li><a href="https://youtu.be/PBTgCKDzUzc" target="_blank">App Inventor Youtube Video</a></li>
         <li><a href="empty-example/processing.html" target="_blank">Processing Program</a></li>
         <li><a href="codedisplay.html" target="_blank">Python Code</a></li>
-        <li><a href="codehs.html">Python CodeHS</a></li>
-        <li><a href="rockpaperscissors.html">Python Rock Paper Scissors</a></li>
+        <li><a href="codehs.html" target="_blank">Python CodeHS</a></li>
+        <li><a href="rockpaperscissors.html" target="_blank">Python Rock Paper Scissors</a></li>
         <li><a href="photogallery.html" target="_blank">W3 Framework Page</a></li>
         <!-- add links <li><a href="#" target="_blank"></a></li> -->
        
