--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         <li><a href="https://docs.google.com/document/d/1BQPGVSQVREO0Y494GgY9xLufZ7wvAnJ-i5R3JIHENwU/edit?usp=sharing" target="_blank">Reading Questions For Dreaming in Code</a></li>
         <li><a href="https://docs.google.com/document/d/1c_GTWWZSkjhWXVyFg7YQ4dkE6uu35B5fJSo16xnYMrE/edit?usp=sharing" target="_blank">Degree Pathways</a></li>
         <li><a href="https://youtu.be/PBTgCKDzUzc" target="_blank">App Inventor Youtube Video</a></li>
-        <li><a href="empty-example/processing.html" target="_blank">Processing Program</a></li>
+        <li><a href="empty-example/processing.html" target="_blank">Processing Program 1</a></li>
+        <li><a href="empty-example/processing2.html" target="_blank">Processing Program 2</a></li>
         <li><a href="codedisplay.html" target="_blank">Python Code</a></li>
         <li><a href="codehs.html" target="_blank">Python CodeHS</a></li>
         <li><a href="rockpaperscissors.html" target="_blank">Python Rock Paper Scissors</a></li>
