--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
         <a href="codedisplay.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Code</a>
         <a href="codehs.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python CodeHS</a>
         <a href="rockpaperscissors.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Rock Paper Scissors</a>
+        <a href="rockpaperscissors.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
+        <!--Add Mobile Responsiveness to the Play Space button  -->
         <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Jump to Play Space Section</a>
     </div>
   </div>
@@ -50,8 +52,9 @@
     </div>
   </div>
 </div>
-
+ 
 <!-- Second Grid: Work & Resume -->
+<!--
 <div class="w3-row">
   <div class="w3-half w3-light-grey w3-center" style="min-height:800px" id="work">
     <div class="w3-padding-64">
@@ -131,8 +134,9 @@
     </div>
   </div>
 </div>
-
+-->
 <!-- Third Grid: Swing By & Contact -->
+<!--
 <div class="w3-row" id="contact">
   <div class="w3-half w3-dark-grey w3-container w3-center" style="height:700px">
     <div class="w3-padding-64">
@@ -167,7 +171,7 @@
     </div>
   </div>
 </div>
-
+-->    
 <!-- Footer -->
 <footer class="w3-container w3-black w3-padding-16">
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
