--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-content" style="max-width:1300px">
 
-<!-- Top Nav -->
-<div class="w3-top">
-  <div class="w3-row w3-padding w3-black">
+<!-- Top Nav 
+<div class="w3-top w3-hide-small">
+  <div class="w3-row-padding w3-black">
     <div class="w3-col s3">
       <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" class="w3-button w3-block w3-black" target="_blank">Rubric Check</a>
     </div>
@@ -16,13 +16,20 @@
       <a href="#" target="_blank" class="w3-button w3-block w3-black">Scratch Projects</a>
     </div>
     <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block w3-black">Python Projects</a>
+      <a href="codedisplay.html" class="w3-button w3-block w3-black">Python Projects</a>
     </div>
     <div class="w3-col s3">
       <a href="#where" class="w3-button w3-block w3-black">Processing JS Projects</a>
     </div>
   </div>
 </div>    
+ -->   
+<div class="w3-bar w3-black">
+  <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" class="w3-bar-item w3-button w3-mobile">Rubric</a>
+  <a href="#" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a>
+  <a href="codedisplay.html" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
+  <a href="#" class="w3-bar-item w3-button w3-mobile">Processing Projects</a>
+</div>  
     
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
@@ -48,7 +55,7 @@
         <a href="codedisplay.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Code</a>
         <a href="codehs.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python CodeHS</a>
         <a href="rockpaperscissors.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Rock Paper Scissors</a>
-        <a href="rockpaperscissors.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
+        <a href="mastermind.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
         <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Jump to Play Space Section</a>
