--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     </div>
   </div>
 </div>    
- -->   
+ -->  
 <div class="w3-bar w3-black">
-  <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" class="w3-bar-item w3-button w3-mobile">Rubric</a>
-  <a href="#" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a>
-  <a href="codedisplay.html" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
-  <a href="#" class="w3-bar-item w3-button w3-mobile">Processing Projects</a>
+  <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Rubric</a>
+  <!--<a href="#" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a> -->
+  <a href="codedisplay.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
+ <!-- <a href="#" class="w3-bar-item w3-button w3-mobile">Processing Projects</a> -->
 </div>  
-    
+   
 <!-- First Grid: Logo & About -->
 <div class="w3-row">
   <div class="w3-half w3-blue w3-container w3-center" style="height:2400px">
