more responsiveness added

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <a href="mastermind.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
-        <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Jump to Play Space Section</a>
+        <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-hide-medium w3-hide-large" >Jump to Play Space Section</a>
     </div>
   </div>
   <div id="playSpace" class="w3-half w3-blue-grey w3-container" style="height:2400px">
