--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </div>
 </div>    
  -->  
-<div class="w3-bar w3-black">
+<div class="w3-bar w3-black w3-top">
   <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Rubric</a>
   <!--<a href="#" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a> -->
   <a href="codedisplay.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
@@ -58,7 +58,9 @@
         <a href="mastermind.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
-        <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-hide-medium w3-hide-large" >Jump to Play Space Section</a>
+        <div id="bottomButton" class="w3-bottom">
+        <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-hide-medium w3-hide-large">Jump to Play Space Section</a>
+        </div>
     </div>
   </div>
   <div id="playSpace" class="w3-half w3-blue-grey w3-container" style="height:2400px">
