--- a/index.html
+++ b/index.html
@@ -6,29 +6,12 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-content" style="max-width:1300px">
 
-<!-- Top Nav 
-<div class="w3-top w3-hide-small">
-  <div class="w3-row-padding w3-black">
-    <div class="w3-col s3">
-      <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" class="w3-button w3-block w3-black" target="_blank">Rubric Check</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#" target="_blank" class="w3-button w3-block w3-black">Scratch Projects</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="codedisplay.html" class="w3-button w3-block w3-black">Python Projects</a>
-    </div>
-    <div class="w3-col s3">
-      <a href="#where" class="w3-button w3-block w3-black">Processing JS Projects</a>
-    </div>
-  </div>
-</div>    
- -->  
+<!-- Top Nav  -->  
 <div class="w3-bar w3-black w3-top">
   <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Rubric</a>
   <!--<a href="#" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a> -->
   <a href="codedisplay.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
- <!-- <a href="#" class="w3-bar-item w3-button w3-mobile">Processing Projects</a> -->
+  <a href="#" class="w3-bar-item w3-button w3-mobile">Processing Projects</a> 
 </div>  
    
 <!-- First Grid: Logo & About -->
@@ -58,11 +41,13 @@
         <a href="mastermind.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
-        <div id="bottomButton" class="w3-bottom">
-        <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-hide-medium w3-hide-large">Jump to Play Space Section</a>
-        </div>
+        
     </div>
+      
   </div>
+    <div id="bottomButton" class="w3-bar w3-black w3-bottom">
+        <a href="#playSpace" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16 w3-hide-medium w3-hide-large">Jump to Play Space Section</a>
+      </div>
   <div id="playSpace" class="w3-half w3-blue-grey w3-container" style="height:2400px">
     <div class="w3-padding-64 w3-center">
       <h1>Play Space</h1>
