--- a/index.html
+++ b/index.html
@@ -15,8 +15,10 @@
 </div>  
    
 <!-- First Grid: Logo & About -->
-<div class="w3-row">
+<div id="About" class="w3-row">
   <div class="w3-half w3-blue w3-container w3-center" style="height:2400px">
+    <div class="w3-padding-64">
+    </div>
     <div class="w3-padding-64">
       <h1>Ian Snyder CS160</h1>
       <h1>Built using W3.CSS</h1>
