--- a/photogallery.html
+++ b/photogallery.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
-<title>W3.CSS Template</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<body>
+<html data-brackets-id='142' lang="en">
+<title data-brackets-id='143'>W3.CSS Template</title>
+<meta data-brackets-id='144' charset="UTF-8">
+<meta data-brackets-id='145' name="viewport" content="width=device-width, initial-scale=1">
+<link data-brackets-id='146' rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<body data-brackets-id='147'>
 
 <!-- Header -->
-<header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-image" src="/images/Photography%2520Portfolio%2520Website/DeeWrightSillouhuette.jpg" alt="Me" width="1500" height="600">
-  <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-light-grey w3-center">
-    <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">IAN SNYDER</h1>
-    <h5 class="w3-hide-large" style="white-space:nowrap">IAN SNYDER</h5>
-    <h3 class="w3-hide-medium w3-hide-small">PHOTOGRAPHER</h3>
+<header data-brackets-id='148' class="w3-display-container w3-content w3-center" style="width:1900px">
+  <img data-brackets-id='149' class="w3-image w3-opacity-max" src="images/PhotographyPortfolioWebsite/TyPowTurnTumalo.jpg" alt="Me" width="100%" height=auto>
+  <div data-brackets-id='150' class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-white w3-center" style="text-shadow:1px 1px 0 #000">
+    <h1 data-brackets-id='151' class="w3-hide-medium w3-hide-small w3-xxxlarge">IAN SNYDER</h1>
+    <h5 data-brackets-id='152' class="w3-hide-large" style="white-space:nowrap">IAN SNYDER</h5>
+    <h3 data-brackets-id='153' class="w3-hide-medium w3-hide-small w3-text-black">PHOTOGRAPHER</h3>
   </div>
   
   <!-- Navbar (placed at the bottom of the header image) -->
-  <div class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a href="#" class="w3-bar-item w3-button">Home</a>
-    <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
-    <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+  <div data-brackets-id='154' class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
+    <a data-brackets-id='155' href="#" class="w3-bar-item w3-button">Home</a>
+    <a data-brackets-id='156' href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
+    <a data-brackets-id='157' href="#contact" class="w3-bar-item w3-button">Contact</a>
   </div>
 </header>
 
 <!-- Navbar on small screens -->
-<div class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
-<div class="w3-bar w3-light-grey">
-  <a href="#" class="w3-bar-item w3-button">Home</a>
-  <a href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
-  <a href="#contact" class="w3-bar-item w3-button">Contact</a>
+<div data-brackets-id='158' class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
+<div data-brackets-id='159' class="w3-bar w3-light-grey">
+  <a data-brackets-id='160' href="#" class="w3-bar-item w3-button">Home</a>
+  <a data-brackets-id='161' href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
+  <a data-brackets-id='162' href="#contact" class="w3-bar-item w3-button">Contact</a>
 </div>
 </div>
 <!-- Page content -->
-<div class="w3-content w3-padding-large w3-margin-top" id="portfolio">
+<div data-brackets-id='163' class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 
   <!-- Images (Portfolio) -->
-  <img src="/w3images/ocean.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img src="/w3images/ocean2.jpg" alt="Ocean II" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="/w3images/falls2.jpg" alt="Falls" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="/w3images/mountainskies.jpg" alt="Skies" class="w3-image w3-margin-top" width="1000" height="500">
-  <img src="/w3images/mountains2.jpg" alt="Mountains" class="w3-image w3-margin-top" width="1000" height="500">
+  <img data-brackets-id='164' src="images/PhotographyPortfolioWebsite/BelknapCraterFireRedSunset.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='165' src="images/PhotographyPortfolioWebsite/BlackButteOverlookSantiamSunset.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='166' src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='167' src="images/PhotographyPortfolioWebsite/BrokenTopWhychusMilkyWay.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='168' src="images/PhotographyPortfolioWebsite/MtWashingtonSantiamSunrise.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='169' src="images/PhotographyPortfolioWebsite/DeeWrightObservatorySillhoutte.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='170' src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
 
   <!-- Contact -->
-  <div class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
-    <h3 class="w3-center">Contact</h3>
-    <hr>
-    <p>Mauris neque quam, fermentum ut nisl vitae, convallis maximus nisl. Sed mattis nunc id lorem euismod placerat. Vivamus porttitor magna enim, ac accumsan tortor cursus at. Phasellus sed ultricies mi non congue ullam corper. Praesent tincidunt sed tellus.</p>
+  <div data-brackets-id='171' class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
+    <h3 data-brackets-id='172' class="w3-center">Contact</h3>
+    <hr data-brackets-id='173'>
+    <p data-brackets-id='174'>All photos are property of Ian Snyder. For prints and permission to use please contact me. I am available for hire if the job is right.</p>
 
-    <form action="/action_page.php" target="_blank">
-      <div class="w3-section">
-        <label>Name</label>
-        <input class="w3-input w3-border" type="text" required name="Name">
+    <form data-brackets-id='175' action="/action_page.php" target="_blank">
+      <div data-brackets-id='176' class="w3-section">
+        <label data-brackets-id='177'>Name</label>
+        <input data-brackets-id='178' class="w3-input w3-border" type="text" required name="Name">
       </div>
-      <div class="w3-section">
-        <label>Email</label>
-        <input class="w3-input w3-border" type="text" required name="Email">
+      <div data-brackets-id='179' class="w3-section">
+        <label data-brackets-id='180'>Email</label>
+        <input data-brackets-id='181' class="w3-input w3-border" type="text" required name="Email">
       </div>
-      <div class="w3-section">
-        <label>Message</label>
-        <input class="w3-input w3-border" required name="Message">
+      <div data-brackets-id='182' class="w3-section">
+        <label data-brackets-id='183'>Message</label>
+        <input data-brackets-id='184' class="w3-input w3-border" required name="Message">
       </div>
-      <button type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
-    </form><br>
-    <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+      <button data-brackets-id='185' type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
+    </form><br data-brackets-id='186'>
+    <p data-brackets-id='187'>Powered by <a data-brackets-id='188' href="https://www.w3schools.com/w3css/default.asp" target="_blank" class="w3-hover-text-green">w3.css</a></p>
 
   </div>
 
@@ -71,3 +73,4 @@
 
 </body>
 </html>
+
