--- a/photogallery.html
+++ b/photogallery.html
@@ -8,40 +8,28 @@
 
 <!-- Header -->
 <header data-brackets-id='148' class="w3-display-container w3-content w3-center" style="width:1900px">
-  <img data-brackets-id='149' class="w3-image w3-opacity-max" src="images/PhotographyPortfolioWebsite/TyPowTurnTumalo.jpg" alt="Me" width="100%" height=auto>
+  <img data-brackets-id='149' class="w3-image w3-opacity-max w3-hover-opacity-off" src="images/PhotographyPortfolioWebsite/TyPowTurnTumalo.jpg" alt="Me" width="100%" height=auto>
   <div data-brackets-id='150' class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-white w3-center" style="text-shadow:1px 1px 0 #000">
     <h1 data-brackets-id='151' class="w3-hide-medium w3-hide-small w3-xxxlarge">IAN SNYDER</h1>
     <h5 data-brackets-id='152' class="w3-hide-large" style="white-space:nowrap">IAN SNYDER</h5>
     <h3 data-brackets-id='153' class="w3-hide-medium w3-hide-small w3-text-black">PHOTOGRAPHER</h3>
   </div>
   
-  <!-- Navbar (placed at the bottom of the header image) -->
-  <div data-brackets-id='154' class="w3-bar w3-light-grey w3-round w3-display-bottommiddle w3-hide-small" style="bottom:-16px">
-    <a data-brackets-id='155' href="#" class="w3-bar-item w3-button">Home</a>
-    <a data-brackets-id='156' href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
-    <a data-brackets-id='157' href="#contact" class="w3-bar-item w3-button">Contact</a>
-  </div>
 </header>
 
 <!-- Navbar on small screens -->
-<div data-brackets-id='158' class="w3-center w3-light-grey w3-padding-16 w3-hide-large w3-hide-medium">
-<div data-brackets-id='159' class="w3-bar w3-light-grey">
-  <a data-brackets-id='160' href="#" class="w3-bar-item w3-button">Home</a>
-  <a data-brackets-id='161' href="#portfolio" class="w3-bar-item w3-button">Portfolio</a>
-  <a data-brackets-id='162' href="#contact" class="w3-bar-item w3-button">Contact</a>
-</div>
-</div>
+
 <!-- Page content -->
 <div data-brackets-id='163' class="w3-content w3-padding-large w3-margin-top" id="portfolio">
 
   <!-- Images (Portfolio) -->
-  <img data-brackets-id='164' src="images/PhotographyPortfolioWebsite/BelknapCraterFireRedSunset.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img data-brackets-id='165' src="images/PhotographyPortfolioWebsite/BlackButteOverlookSantiamSunset.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img data-brackets-id='166' src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img data-brackets-id='167' src="images/PhotographyPortfolioWebsite/BrokenTopWhychusMilkyWay.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img data-brackets-id='168' src="images/PhotographyPortfolioWebsite/MtWashingtonSantiamSunrise.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img data-brackets-id='169' src="images/PhotographyPortfolioWebsite/DeeWrightObservatorySillhoutte.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
-  <img data-brackets-id='170' src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image" width="1000" height="500">
+  <img data-brackets-id='164' src="images/PhotographyPortfolioWebsite/BelknapCraterFireRedSunset.jpg" alt="Ocean" class="w3-image w3-border-left w3-border-top w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img data-brackets-id='165' src="images/PhotographyPortfolioWebsite/BlackButteOverlookSantiamSunset.jpg" alt="Ocean" class="w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img data-brackets-id='166' src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img data-brackets-id='167' src="images/PhotographyPortfolioWebsite/BrokenTopWhychusMilkyWay.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img data-brackets-id='168' src="images/PhotographyPortfolioWebsite/MtWashingtonSantiamSunrise.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img data-brackets-id='169' src="images/PhotographyPortfolioWebsite/DeeWrightObservatorySillhoutte.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img data-brackets-id='170' src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image w3-image w3-border-bottom w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
 
   <!-- Contact -->
   <div data-brackets-id='171' class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
