took off borders

--- a/photogallery.html
+++ b/photogallery.html
@@ -55,13 +55,13 @@
 <div id="pageContent" class="w3-content w3-padding-large w3-center" id="portfolio" style="background-image: linear-gradient(white, lightgrey)">
 
   <!-- Images (Portfolio) -->
-  <img id="images" src="images/PhotographyPortfolioWebsite/BelknapCraterFireRedSunset.jpg" alt="Ocean" class="w3-image w3-border-grey w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/BlackButteOverlookSantiamSunset.jpg" alt="Ocean" class="w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/BrokenTopWhychusMilkyWay.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/MtWashingtonSantiamSunrise.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/DeeWrightObservatorySillhoutte.jpg" alt="Ocean" class="w3-image w3-image w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
-  <img id="images" src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image w3-image w3-border-bottom w3-border-left w3-border-right w3-border-grey w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/BelknapCraterFireRedSunset.jpg" alt="Ocean" class="w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/BlackButteOverlookSantiamSunset.jpg" alt="Ocean" class="w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/BrokenTopWhychusMilkyWay.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/MtWashingtonSantiamSunrise.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/DeeWrightObservatorySillhoutte.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image w3-padding" width="1000" height="500">
 
   <!-- Contact -->
   <div data-brackets-id='171' class="w3-light-grey w3-padding-large w3-padding-32 w3-margin-top" id="contact">
