--- a/codedisplay.html
+++ b/codedisplay.html
@@ -21,7 +21,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">CS 160 Portfolio</a>
     <a href="rockpaperscissors.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Rock Paper Scissors</a>
     <a href="mastermind.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Mastermind</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
+    <a href="codehs.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
+    <a href="hangman.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Hangman</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a> 
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a> -->
   </div>
