--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
         <a href="codehs.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python CodeHS</a>
         <a href="rockpaperscissors.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Rock Paper Scissors</a>
         <a href="mastermind.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Mastermind</a>
+        <a href="hangman.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Hangman</a>
+        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Number-Base Conversion</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
         
