--- a/hangman.html
+++ b/hangman.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>RockPaperScissors</title>
+<title>Hangman</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -19,10 +19,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
     <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">CS 160 Portfolio</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Rock Paper Scissors</a>
+    <a href="rockpaperscissors.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Rock Paper Scissors</a>
     <a href="mastermind.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Mastermind</a>
     <a href="codehs.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
-    <a href="hangman.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Hangman</a>
+    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Hangman</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a> 
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a> -->
   </div>
@@ -30,7 +30,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
     <a href="rockpaperscissors.html" class="w3-bar-item w3-button w3-padding-large">Rock Paper Scissors</a>
-    <a href="mastermind.html" class="w3-bar-item w3-button w3-padding-large">Mastermind</a>
+    <a href="codehs.html" class="w3-bar-item w3-button w3-padding-large">Mastermind</a>
     <a href="codehs.html" class="w3-bar-item w3-button w3-padding-large">CodeHS</a>
     <!-- These links do nothing yet. 
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
@@ -50,10 +50,10 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h1>Rock Paper Scissors</h1>
+      <h1>Hangman<h1>
       <h5 class="w3-padding-32">Hit the Play button at top to run the code. Follow the prompts on the console.</h5>
 
-      <iframe height="600px" width="120%" src="https://repl.it/@IanSnyder1/ActiveBlushingConcentrate?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
+        <iframe height="400px" width="100%" src="https://repl.it/@IanSnyder1/Hangman?lite=true" scrolling="no" frameborder="no" allowtransparency="true" allowfullscreen="true" sandbox="allow-forms allow-pointer-lock allow-popups allow-same-origin allow-scripts allow-modals"></iframe>
         
     </div>
 
