--- a/processingPrograms.html
+++ b/processingPrograms.html
@@ -5,7 +5,17 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-content" style="max-width:1300px">
- 
+
+<!-- Top Nav -->
+<div class="w3-bar w3-black w3-top">
+    <a href="index.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Home Page</a>
+    <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Mid-Term Rubric</a>
+  <a href="https://docs.google.com/document/d/1E8cCEj4x_9DEZuiL5U5qhNlR05ZseoBfEd-ei7Q6bpA/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Final Rubric</a>    
+  <a href="scratchProjects.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a>    
+  <a href="codedisplay.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
+  <a href="processingPrograms.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Processing Projects</a>
+  <a href="SubSiteFolderCS160/ReadingsPage.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Reading Assignments</a> 
+</div>     
    
 <!-- First Grid: Logo & About -->
 <div id="About" class="w3-row">
