--- a/scratchProjects.html
+++ b/scratchProjects.html
@@ -5,21 +5,31 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body class="w3-content" style="max-width:1300px">
- 
+
+<!-- Top Nav -->
+<div class="w3-bar w3-black w3-top">
+    <a href="index.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Home Page</a>
+    <a href="https://docs.google.com/document/d/1BzA-Aj06QZOiWqHrNrn-I28GfDlZpPwIP-Y1_msRwxE/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Mid-Term Rubric</a>
+  <a href="https://docs.google.com/document/d/1E8cCEj4x_9DEZuiL5U5qhNlR05ZseoBfEd-ei7Q6bpA/edit?usp=sharing" target="_blank" class="w3-bar-item w3-button w3-mobile">Final Rubric</a>    
+  <a href="scratchProjects.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Scratch Projects</a>    
+  <a href="codedisplay.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Python Projects</a>
+  <a href="processingPrograms.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Processing Projects</a>
+  <a href="SubSiteFolderCS160/ReadingsPage.html" target="_blank" class="w3-bar-item w3-button w3-mobile">Reading Assignments</a> 
+</div> 
    
 <!-- First Grid: Logo & About -->
 <div id="About" class="w3-row">
   <div class="w3-blue w3-container w3-center" style="height:2400px">
     <div>
     </div>
-    <div class="w3-padding-16">
+    <div class="w3-padding-64">
       <h1>Scratch Projects</h1>
       <h3>Built using W3.CSS</h3>
-      <p>All assignment links can be found below.</p>
+      <p>All assignment links can be found below. Apps are embeded below as well.</p>
     </div>
     <div class="w3-padding-16">
         
-        <img src="../images/downsizedImages/GreatSandDunesPano.jpg" style="width: 100%">  
+        <img src="/images/downsizedImages/GreatSandDunesPano.jpg" style="width: 100%">  
         <a href="https://scratch.mit.edu/projects/331549006" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Project 1</a>
         <a href="https://scratch.mit.edu/projects/333407264" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Project 2</a>
         <a href="https://scratch.mit.edu/projects/335538209" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Scratch Project 3</a>
