--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a href="codedisplay.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Python Code</a>
         <a href="ElementsProject1.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Elements Project Chapter 1</a>
         <a href="codeCombat.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Code Combat</a>
-        <a href="#" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Robot Treasure Hunt</a>
+        <a href="RobotTreasureHunt.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Robot Treasure Hunt</a>
         <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">W3 Framework Page</a>
         <!--Add Mobile Responsiveness to the Play Space button  -->
         
