--- a/DecimalConversion.html
+++ b/DecimalConversion.html
@@ -17,12 +17,13 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-red w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-hover-white">CS 160 Portfolio</a>
+ <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-red" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+    <a href="index.html" class="w3-bar-item w3-button w3-padding-large w3-white">CS 160 Portfolio</a>
     <a href="rockpaperscissors.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Rock Paper Scissors</a>
     <a href="mastermind.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Mastermind</a>
     <a href="codehs.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">CodeHS</a>
-    <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Hangman</a>
+    <a href="hangman.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Hangman</a>
+    <a href="DecimalConversion.html" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Decimal Coversion</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a> 
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a> -->
   </div>
