--- a/IanChris.html
+++ b/IanChris.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Ian Snyder</title>
+<title>Ian Snyder -- Chris Ryan</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -29,7 +29,7 @@
         <!--
         <a href="" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16"> </a>
         -->
-        <a href="IanChris.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Ian &amp; Chris's Site </a>
+        <a href="" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Ian &amp; Chris's Site </a>
        
         
     </div>
