--- a/gallerypage.html
+++ b/gallerypage.html
@@ -11,22 +11,22 @@ body,h1 {font-family: "Raleway", Arial, sans-serif}
 h1 {letter-spacing: 6px}
 .w3-row-padding img {margin-bottom: 12px}
 </style>
-<body>
+<body style="background-image: linear-gradient(darkgray, black)">
 
 <!-- !PAGE CONTENT! -->
 <div class="w3-content" style="max-width:1500px">
 
 <!-- Header -->
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">PHOTO GALLERY</h1>
-  <h1>Ian Snyder</h1>
+  <h1 class="w3-xlarge" style="text-transform: lowercase">PHOTO GALLERY</h1>
+  <h1>ian snyder</h1>
   
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-      <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button">Home</a>
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">Photo Gallery</a>
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">About Me</a>
-      <a href="#" class="w3-bar-item w3-button">Contact</a>
+      <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button w3-light-grey">home</a>
+      <a href="#" class="w3-bar-item w3-button w3-dark-grey">photo gallery</a>
+      <a href="#" class="w3-bar-item w3-button w3-light-grey">about me</a>
+      <a href="#" class="w3-bar-item w3-button w3-light-grey">contact</a>
     </div>
   </div>
 </header>
