--- a/ianSnyderPhotography.html
+++ b/ianSnyderPhotography.html
@@ -18,15 +18,15 @@
 
     
 <header class="w3-panel w3-center w3-opacity" style="padding:128px 16px">
-  <h1 class="w3-xlarge">PHOTOGRAPHY</h1>
-  <h1>Ian Snyder</h1>
+  <h1>ian snyder - photography</h1>
+  <h4>landscape, nature, &amp; adventure</h2>
   
   <div class="w3-padding-32">
     <div class="w3-bar w3-border">
-      <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button">Home</a>
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">Photo Gallery</a>
-      <a href="#" class="w3-bar-item w3-button w3-light-grey">About Me</a>
-      <a href="#" class="w3-bar-item w3-button">Contact</a>
+      <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button w3-dark-grey">home</a>
+      <a href="gallerypage.html" class="w3-bar-item w3-button w3-light-grey">photo gallery</a>
+      <a href="#" class="w3-bar-item w3-button w3-light-grey">about me</a>
+      <a href="#" class="w3-bar-item w3-button w3-light-grey">contact</a>
     </div>
   </div>
 </header>    
@@ -67,10 +67,11 @@
     
 
 <!-- Page content -->
-<div id="pageContent" class="w3-content w3-padding-large w3-center" id="portfolio" style="background-image: linear-gradient(white, lightgrey)">
+<div id="pageContent" class="w3-content w3-padding-large w3-center" id="portfolio" style="background-image: linear-gradient(white, lightgrey); margin-top: -100px;">
 
   <!-- Images (Portfolio) -->
   <img id="images" src="images/PhotographyPortfolioWebsite/SparksLakeSunsetLenticulars.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
+  <img id="images" src="images/PhotographyPortfolioWebsite/MiataHood.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
   <img id="images" src="images/PhotographyPortfolioWebsite/TyPowTurnTumalo.jpg" alt="Ocean" class="w3-image w3-image w3-padding" width="1000" height="500">
   <img id="images" src="images/PhotographyPortfolioWebsite/McNeilPointHoodLenticular.jpg" alt="Ocean" class="w3-image w3-padding" width="1000" height="500">
 
