--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       <!-- Throw links here -->
     <div class="w3-padding-16">
         <img src="../images/downsizedImages/GreatSandDunesPano.jpg" style="width: 100%">  
-        <a href="photogallery.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Photography Site</a>
+        <a href="ianSnyderPhotography.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Photography Site</a>
         <!--
         <a href="" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16"> </a>
         -->
-        <a href="IanChris.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Computer Science Portfolio </a>
+        <a href="ComputerSciencePortfolio.html" target="_blank" class="w3-button w3-black w3-block w3-hover-teal w3-padding-16">Computer Science Portfolio </a>
        
         
     </div>
