--- a/ianSnyderPhotography.html
+++ b/ianSnyderPhotography.html
@@ -26,8 +26,11 @@
       <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button w3-dark-grey">home</a>
       <a href="gallerypage.html" class="w3-bar-item w3-button w3-light-grey">photo gallery</a>
       <a href="instagramPortfolio.html" class="w3-bar-item w3-button w3-light-grey">instagram</a>
+        <!-- Coming Soon -->
+        <!--
       <a href="#" class="w3-bar-item w3-button w3-light-grey">about me</a>
       <a href="#" class="w3-bar-item w3-button w3-light-grey">contact</a>
+-->
     </div>
   </div>
 </header>    
@@ -93,7 +96,7 @@
       </div>
       <div data-brackets-id='182' class="w3-section">
         <label data-brackets-id='183'>Message</label>
-        <textarea id="183" name="subject" placeholder="Write something.." style="height:200px; width: 100%;"></textarea>
+        <textarea id="183" name="subject" placeholder="This contact form doesn't work yet, sorry!" style="height:200px; width: 100%;"></textarea>
           
       </div>
       <button data-brackets-id='185' type="submit" class="w3-button w3-block w3-dark-grey">Send</button>
