--- a/instagramPortfolio.html
+++ b/instagramPortfolio.html
@@ -26,8 +26,11 @@ h1 {letter-spacing: 6px}
       <a href="ianSnyderPhotography.html" class="w3-bar-item w3-button w3-light-grey">home</a>
       <a href="gallerypage.html" class="w3-bar-item w3-button w3-light-grey">photo gallery</a>
       <a href="#" class="w3-bar-item w3-button w3-dark-grey">instagram</a>
+        <!-- Coming Soon -->
+        <!--
       <a href="#" class="w3-bar-item w3-button w3-light-grey">about me</a>
       <a href="#" class="w3-bar-item w3-button w3-light-grey">contact</a>
+        -->
     </div>
   </div>
 </header>
